syntax = "proto3";
package service;

message ReadFragsRequest {
  uint64 from = 1;
  string file_name = 2;
}

message ReadFragsResponse {
  repeated string file_names = 1;
}

service Query {
  rpc ReadFrags(ReadFragsRequest) returns (ReadFragsResponse) {}
}
