syntax = "proto3";

import "messages.proto";

package services;

service FileStore {
  rpc ReadFileNames(messages.ReadFileNamesRequest) returns (messages.ReadFileNamesResponse) {}
  rpc ReadFrags(messages.ReadFragsRequest) returns (messages.ReadFragsResponse) {}
  rpc WriteFrags(messages.Fragment) returns (messages.WriteFragResponse) {}
}
